Agregado funciones, y texto basico HTML re-entrega

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
   </head>
   <body>
     <script src="script.js"></script>
+    <h1>Calculadora de precio en pesos AR$</h1>
+    <h2>Recuerde que parte del importe de la compra le llegara como IVA, Impuesto PAIS e Impuesto a las ganancias</h2>
   </body>
 </html>
